popup/gallery.Supersized/css/supersized.css
/*
	Supersized - Fullscreen Slideshow jQuery Plugin
	Version 3.1.3
	www.buildinternet.com/project/supersized
	
	By Sam Dunn / One Mighty Roar (www.onemightyroar.com)
	Released under MIT License / GPL License
*/

* {
	margin: 0;
	padding: 0;
}

body {
	background: #111;
}

img {
	border: none;
}

#supersized-loader {
	position: absolute;
	z-index: 10;
	top: 50%;
	left: 50%;
	width: 60px;
	height: 60px;
	margin: -30px 0 0 -30px;
	text-indent: -999em;
	-moz-border-radius: 5px;
	-webkit-border-radius: 5px;
	border-radius: 5px;
	background: rgba(0, 0, 0, 0.8) url(../img/progress.gif) no-repeat center center;
	background-color: #111;
}

#supersized {
	position: fixed;
	z-index: -999;
	top: 0;
	left: 0;
	overflow: hidden;
	width: 100%;
	height: 100%;
}

#supersized img {
	position: relative;
	display: none;
	width: auto;
	height: auto;
	border: none;
	outline: none;
}

#supersized.speed img {
	-ms-interpolation-mode: nearest-neighbor;
	image-rendering: -moz-crisp-edges;
}

/*Speed*/
#supersized.quality img {
	-ms-interpolation-mode: bicubic;
	image-rendering: optimizeQuality;
}

/*Quality*/

#supersized a {
	position: absolute;
	z-index: -30;
	top: 0;
	left: 0;
	overflow: hidden;
	width: 100%;
	height: 100%;
	background: #111;
}

#supersized a.prevslide {
	z-index: -20;
}

#supersized a.activeslide {
	z-index: -10;
}

#supersized a.prevslide img, #supersized a.activeslide img {
	display: inline;
}

/*Controls Section*/
#controls-wrapper {
	position: fixed;
	z-index: 4;
	bottom: 0;
	left: 0;
	width: 100%;
	height: 62px;
	margin: 0 auto;
	background: url(../img/nav-bg.png) repeat-x;
}

#controls {
	z-index: 5;
	display: flex;
	overflow: hidden;
	align-items: center;
	justify-content: space-between;
	height: 100%;
	padding: 0 84px; /* Increase padding to give thumbnails room */
	text-align: left;
}

#slidecounter {
	font: 23px "Helvetica Neue", Helvetica, Arial, sans-serif;
	font-weight: bold;
	float: left;
	margin: 0 10px;
	color: #888;
	text-shadow: #000 0 -1px 0;
}

#slidecaption {
	font: 16px "Helvetica Neue", Helvetica, Arial, sans-serif;
	font-weight: bold;
	overflow: hidden; /* float:left; */
	margin-right: auto;
	color: #FFF;
	text-shadow: #000 0 2px 0; /* margin:23px 20px 23px 0; */
}

#navigation {
	float: right;
	min-width: 140px;
	margin: 10px 0px 0 0;
}

/*Thumbnail Navigation*/
#nextthumb, #prevthumb {
	position: fixed;
	z-index: 6;
	bottom: 12px;
	display: none;
	overflow: hidden;
	width: 100px;
	height: 75px;
	border: 2px solid #fff;
	background: #ddd;
	-webkit-box-shadow: 0 0 5px #000;
}

#nextthumb {
	right: 12px;
}

#prevthumb {
	left: 12px;
}

#nextthumb img, #prevthumb img {
	width: 150px;
	height: auto;
}

#nextthumb:active, #prevthumb:active {
	bottom: 10px;
}

#navigation > :hover, #nextthumb:hover, #prevthumb:hover {
	cursor: pointer;
}

p {
	font: 10pt "Helvetica", Arial, sans-serif;
	padding: 2px;
	color: #000;
}

p a {
	font-size: 8pt;
	padding: 0px;
	text-decoration: none;
	color: #ddd;
	border-top: 1px solid #333;
	-moz-border-radius: 3px;
	-webkit-border-radius: 3px;
	border-radius: 3px;
	outline: none;
	background: #222;
	-moz-box-shadow: 0px 1px 1px #000;
	-webkit-box-shadow: 0px 1px 1px #000;
	box-shadow: 0px 1px 1px #000;
}

p a:hover {
	color: #fff;
	border-color: #5c94cb;
	background-color: #427cb4;
}

h3 {
	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
	font-size: 18px;
	padding: 2px;
	color: #ffffff;
}

#content {
	position: absolute;
	top: 5px;
	right: 6px;
	width: 390px;
	text-align: left; /* font-size: 24px; */
	background: #111;
	background: rgba(255, 255, 255, 0.38);
}

.stamp {
	float: right;
	margin: 15px 30px 0 0;
}


/*адаптивная верстка*/
/*@media (max-width: 800px) {
video{
max-width: 100%;
};

}*/
/*#controls-wrapper {
background: rgb(255,255,255);
background: linear-gradient(180deg, rgba(255,255,255,0.1) 0%, rgba(159,159,159,1) 100%);
}*/
/* Medium Devices, Desktops */
@media only screen and (max-width: 799px) {


	/*#controls,*/
	#slidecounter,
	#content {
		display: none;
	}

	video {
		max-width: 100%;
	}

	#nextthumb, #prevthumb {
		width: 80px;
		height: 70px;
	}

	#controls {
		align-items: center;
		justify-content: s;
		box-sizing: border-box;
		width: 100%;
		margin: 0 auto;
		padding: 0 88px;
	}

	#navigation {
		position: static;
		display: block;
		float: none;
		margin: 0 auto;
	}

	#slidecaption {
		display: none;
	}

}

.activeslide:after {
	position: absolute;
	z-index: 10;
	top: 0;
	left: 0;
	width: 100vw;
	height: 100vh;
	content: "";
	pointer-events: none;
	background-image: url("../img/logo_bg.png");
	background-repeat: no-repeat;
	background-position: center;
	background-size: contain;
}

